# froggy-rand

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: hasher.rs  lib.rs
