[package]
name = "froggy-rand"
version = "0.1.0"
authors = ["Dan Slocombe"]
description = "Random number generation for games without state"
license = "MIT"
readme = "README.md"
keywords = [ "rng", "rand", "gamedev", "games", "game", "hash", "hashing" ]
categories = [ "algorithms" ]
homepage = "https://github.com/danslocombe/froggy-rand"
repository = "https://github.com/danslocombe/froggy-rand"
edition = "2018"

[dependencies]
deterministic-hash = "1.0.1"
hashers = "1.0.1"