[package]
name = "froggy-rand"
version = "0.2.0"
authors = ["Dan Slocombe"]
description = "Random number generation without state for games"
license = "MIT"
readme = "README.md"
keywords = [ "rng", "rand", "gamedev", "game", "hash", ]
categories = [ "algorithms" ]
homepage = "https://github.com/danslocombe/froggy-rand"
repository = "https://github.com/danslocombe/froggy-rand"
edition = "2018"

[dependencies]
deterministic-hash = "1.0.1"
hashers = "1.0.1"